# c64basic-compiler

./: .gitignore  README.md  makefile  pyproject.toml
docs/: 00.ideas.md  memoria.md  pseudocode.md
docs/handlers/: end_handler.py  gosub_handler.py  goto_handler.py  instruction_handler.py  let_handler.py  print_handler.py  rem_handler.py  return_handler.py
examples/: 02.01.helloworld.bas  03.01.gosub.bas  04.01.variables.bas  04.02.variables.bas  04.03.variables.bas  04.04.variables.bas  04.05.variables.bas  04variables.bas  05.01.print.bas  05.02.print.bas  05.03.print.bas  06.01.if_then.bas  06.02.if_then.bas  06.03.if_then.bas  07.01.for_next.bas  08.01.poke.bas  09.01.input.bas  10.01.get.bas  beer.bas  colorsdemo.bas  ellipse.bas  gosub.bas  helloworld.bas  plot.bas  poke.bas  soundc64.bas  svariables.bas  variables.bas
src/c64basic_compiler/: bas2prg.py  build.py  evaluate.py
src/c64basic_compiler/basic/: __init__.py  basic_function.py  comparison_operators.py  logic_operators.py  math_functions.py  operators.py  string_functions.py  system_functions.py
src/c64basic_compiler/common/: basic_tokens.py  colors.py  compile_context.py  kernal_routines.py  opcodes_6502.py  petscii_map.py  special_chars.py  string_area.py  symbol_table.py  text_to_petscii.py
src/c64basic_compiler/compiler/: codegen.py  (+5 more)
tests/: test_bas2prg.py  test_basic_tokens.py  test_compile_context.py  test_complex_expressions.py  test_evaluate.py  test_expressions_integration.py  test_instructions_registry.py  test_parser.py  test_string_area.py  test_symbol_table.py  test_tokenizer.py
(+24 files in other folders)
