[project]
name = "c64basic_compiler"
version = "0.1.0"
description = "Commodore 64 basic compiler"
authors = [
    {name = "Linus", email = "impalah@gmail.com"}
]
readme = "README.md"
license = { text = "MIT" }

requires-python = ">=3.12"

dependencies = [
    "loguru>=0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/c64basic_compiler"]

[tool.ruff]
line-length = 88
src = ["src"]  # First, add the source code folder
target-version = "py312"  # We are using Python 3.12

[tool.ruff.lint]
# Activate additional rules to imitate flake8 and isort
select = [
  "E", "F", "I", "UP", "B", "W", "C90"
]
# Exclude files and folders that are not part of the source code
exclude = ["tests/data", ".venv"]

# Activate autofix for common problems
fixable = ["ALL"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
pretty = true

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "mock>=5.2.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.7",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]



